# zero2prod

./: Cargo.toml  README.md  configuration.yaml
migrations/: 20260321114004_create_subscription_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs
src/routes/: health_check.rs  subscribe.rs
tests/: health_check.rs  return_200_valid_form.rs  return_400_invalid_form.rs
tests/common/: mod.rs
